remake main page

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <a href="#" class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
       </section>
       <section class="mdc-top-app-bar__section contained-section header-section">
+        <a class="logo" href="./">
+          <img src="assets/logo.png" alt="Zero Waste Academy">
+        </a>
         <nav class="mdc-list">
-          <a class="mdc-list-item logo" role="option" href="./">
-            <img src="assets/logo.png" alt="Zero Waste Academy">
-          </a>
           <a class="mdc-list-item" role="option" href="team.html">
             <span class="mdc-list-item__text">Команда</span>
           </a>
@@ -84,7 +84,8 @@
     <div>
       <div class="whatis article">
         <h2 class="mdc-typography--headline2">Що таке Zero Waste Academy</h2>
-        <p>це унікальний навчально-практичний курс про сучасне керування відходами (ТПВ) відповідно до принципів zero
+        <p class="short">це унікальний навчально-практичний курс про сучасне керування відходами (ТПВ) відповідно до
+          принципів zero
           waste та циркулярної економіки.
         </p>
       </div>
@@ -92,7 +93,8 @@
     <div>
       <div class="target article">
         <h2 class="mdc-typography--headline2">Мета проєкту</h2>
-        <p>надати достатню кількість знань та навичок для фахівців у сфері відходів, керуючих ОСББ, ОСМ, представників
+        <p class="short">надати достатню кількість знань та навичок для фахівців у сфері відходів, керуючих ОСББ, ОСМ,
+          представників
           ОМС, екологічних ГО, активістів для успішної реалізації сучасних екологічних проєктів, зміни/адаптації
           стратегії, планів дій, розробки нових програм з поводження з ТПВ на місцевому рівні.</p>
       </div>
@@ -145,19 +147,22 @@
     <div>
       <div class="history article">
         <h2 class="mdc-typography--headline2">Історія</h2>
-        <p class="resume">За 2020-2021 роки ми провели 3 курси та випустили більше 100 випускників та випускниць</p>
+        <p class="resume">За 2020-2021 роки ми провели<br />
+          <strong>3</strong> курси та випустили більше<br />
+          <strong>100</strong> випускників та випускниць
+        </p>
         <label>
           <a class="mdc-button mdc-button--outlined" href="#">
             <span class="mdc-button__label">Читати...</span>
           </a>
-          <span>Курс Zero Waste Academy орієнтований на нефахівців/чинь</span>
+          <p>Курс Zero Waste Academy орієнтований на нефахівців/чинь</p>
         </label>
         <label>
           <a class="mdc-button mdc-button--outlined" href="#">
             <span class="mdc-button__label">Читати...</span>
           </a>
-          <span>Курс Zero Waste Academy deep level розрахований на фахівців/чинь, представників/ниць ОМС, керуючих ОСББ,
-            експертів/ок у сфері поводження з відходами</span>
+          <p>Курс Zero Waste Academy deep level розрахований на фахівців/чинь, представників/ниць ОМС, керуючих ОСББ,
+            експертів/ок у сфері поводження з відходами</p>
         </label>
       </div>
     </div>
@@ -288,7 +293,17 @@
           </li>
           <li>
             <a class="" href="#">
-              <span class="">Отримати сертифікат</span>
+              <span class="">Індивідуальний курс з ментором</span>
+            </a>
+          </li>
+          <li>
+            <a class="" href="#">
+              <span class="">Курс для дітей</span>
+            </a>
+          </li>
+          <li>
+            <a class="" href="#">
+              <span class="">Для адміністраторів офісів та організацій</span>
             </a>
           </li>
         </ul>
@@ -297,11 +312,16 @@
             <h4 class="mdc-typography--headline4">Контакти:</h4>
           </li>
           <li>
-            <a class="" href="#">
+            <a class="" href="mailto:academy.zerowaste@gmail.com">
               <span class="">Пошта</span>
             </a>
           </li>
           <li>
+            <a class="" href="tel:+380506986613">
+              <span class="">Телефон: +380506986613</span>
+            </a>
+          </li>
+          <li class="social">
             <a class="imglink" href="https://www.facebook.com/kharkivzerowaste">
               <svg>
                 <use xlink:href="assets/icons.svg#facebook"></use>
@@ -312,7 +332,7 @@
                 <use xlink:href="assets/icons.svg#instagram"></use>
               </svg>
             </a>
-            <a class="imglink" href="#">
+            <a class="imglink youtube" href="https://www.youtube.com/@zerowastekharkiv7514">
               <svg>
                 <use xlink:href="assets/icons.svg#youtube"></use>
               </svg>
