--- a/team.html
+++ b/team.html
@@ -46,10 +46,10 @@
                 <a href="#" class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
             </section>
             <section class="mdc-top-app-bar__section contained-section header-section">
+                <a class="logo" href="./">
+                    <img src="assets/logo.png" alt="Zero Waste Academy">
+                </a>
                 <nav class="mdc-list">
-                    <a class="mdc-list-item logo" role="option" href="./">
-                        <img src="assets/logo.png" alt="Zero Waste Academy">
-                    </a>
                     <a class="mdc-list-item mdc-list-item--selected" role="option" aria-selected="true"
                         href="team.html">
                         <span class="mdc-list-item__text">Команда</span>
@@ -119,47 +119,6 @@
             <div class="mentors article">
                 <h2 class="mdc-typography--headline2">Ментори</h2>
                 <ul>
-                    <li>
-                        <div>
-                            <img src="assets/vasa-pupkin.jpg" />
-                            <h3>Ліліана Семенюта</h3>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est
-                            a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus,
-                            ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
-                            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                            Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus
-                            ex. Suspendisse ac rhoncus nisl, eu tempor urna. Curabitur vel bibendum lorem. Morbi
-                            convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Lorem ipsum dolor
-                            sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis
-                            tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut
-                            interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
-                        </p>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="assets/vasa-pupkin.jpg" />
-                            <h3>Наталія Денисенко</h3>
-                        </div>
-                        <p>Працюю на стику трьох сфер - IT, Zero Waste та коучинг, що максимально дозволяє мені
-                            реалізовувати свое покликання і приносити цим користь суспільству. На даний момент мій
-                            досвід в IT складає 16+ років, починала і продовжую розвиватися в тестуванні, управляла
-                            командами до 10 людей, вся діяльність пронизана проектним менеджментом. П'ять років назад
-                            почала сортувати свої відходи. а потім долучилася до організації Kharkiv Zero Waste. Самим
-                            успішним проектом організації, в якому я брала участь була перша Zero Waste Academy
-                            (2020/2021). На цей момент я вже мала диплом коуча і зайшла в проект в ролі
-                            співорганізаторки і головної менторки, де мала чудову команду спеціалістів у сфері
-                            управління відходами і коучингу, що сприяло нароженню креативних проектів і в деякому сенсі
-                            переродженню їхніх авторів. До третьої Zero Waste Academy (2021/2022) я доєдналася в ролі
-                            коуча, де мала можливість проводити глибоку роботу в індивідуальному форматі. Радію, коли
-                            студенти відмічають для себе цінність коучингу, який комусь допоміг стабілізувати
-                            психоемоційний стан, розставити акценти і збалансувати свої зусилля в різних сферах життя,
-                            не розгубитися в реаліях і йти до кінця свого проекту, а комусь розкрити внутрішні резерви і
-                            побачити нові можливості, прівнюється з ефектом "як вікна помити!" (цитата). Також маю
-                            сертифікати НЛП-практика та командного коуча, техніки яких використовую в індивідуальній і
-                            командній роботі відповідно.
-                        </p>
-                    </li>
                     <li>
                         <div>
                             <img src="assets/irina-kazakova.jpg" />
@@ -309,83 +268,98 @@
         <div>
             <div class="footer">
                 <ul>
-                    <li>
-                        <h4 class="mdc-typography--headline4">Навігація</h4>
-                    </li>
-                    <li>
-                        <a class="" href="team.html">
-                            <span class="">Команда</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="#history-and-results.html">
-                            <span class="">Історія та результати</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="#teaching.html">
-                            <span class="">Навчання</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="#certificate.html">
-                            <span class="">Сертифікат</span>
-                        </a>
-                    </li>
+                  <li>
+                    <h4 class="mdc-typography--headline4">Навігація</h4>
+                  </li>
+                  <li>
+                    <a class="" href="team.html">
+                      <span class="">Команда</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="" href="#history-and-results.html">
+                      <span class="">Історія та результати</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="" href="#teaching.html">
+                      <span class="">Навчання</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="" href="#certificate.html">
+                      <span class="">Сертифікат</span>
+                    </a>
+                  </li>
                 </ul>
                 <ul>
-                    <li>
-                        <h4 class="mdc-typography--headline4">Курси</h4>
-                    </li>
-                    <li>
-                        <a class="" href="#">
-                            <span class="">Базовий курс</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="#">
-                            <span class="">Поглиблений курс</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="#">
-                            <span class="">Взаємодія з ментором</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="#">
-                            <span class="">Отримати сертифікат</span>
-                        </a>
-                    </li>
+                  <li>
+                    <h4 class="mdc-typography--headline4">Курси</h4>
+                  </li>
+                  <li>
+                    <a class="" href="#">
+                      <span class="">Базовий курс</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="" href="#">
+                      <span class="">Поглиблений курс</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="" href="#">
+                      <span class="">Взаємодія з ментором</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="" href="#">
+                      <span class="">Індивідуальний курс з ментором</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="" href="#">
+                      <span class="">Курс для дітей</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="" href="#">
+                      <span class="">Для адміністраторів офісів та організацій</span>
+                    </a>
+                  </li>
                 </ul>
                 <ul>
-                    <li>
-                        <h4 class="mdc-typography--headline4">Контакти:</h4>
-                    </li>
-                    <li>
-                        <a class="" href="#">
-                            <span class="">Пошта</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="imglink" href="https://www.facebook.com/kharkivzerowaste">
-                            <svg>
-                                <use xlink:href="assets/icons.svg#facebook"></use>
-                            </svg>
-                        </a>
-                        <a class="imglink" href="https://www.instagram.com/kharkiv_zero_waste/">
-                            <svg>
-                                <use xlink:href="assets/icons.svg#instagram"></use>
-                            </svg>
-                        </a>
-                        <a class="imglink" href="#">
-                            <svg>
-                                <use xlink:href="assets/icons.svg#youtube"></use>
-                            </svg>
-                        </a>
-                    </li>
+                  <li>
+                    <h4 class="mdc-typography--headline4">Контакти:</h4>
+                  </li>
+                  <li>
+                    <a class="" href="mailto:academy.zerowaste@gmail.com">
+                      <span class="">Пошта</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="" href="tel:+380506986613">
+                      <span class="">Телефон: +380506986613</span>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="imglink" href="https://www.facebook.com/kharkivzerowaste">
+                      <svg>
+                        <use xlink:href="assets/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                    <a class="imglink" href="https://www.instagram.com/kharkiv_zero_waste/">
+                      <svg>
+                        <use xlink:href="assets/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                    <a class="imglink youtube" href="https://www.youtube.com/@zerowastekharkiv7514">
+                      <svg>
+                        <use xlink:href="assets/icons.svg#youtube"></use>
+                      </svg>
+                    </a>
+                  </li>
                 </ul>
-            </div>
+              </div>
         </div>
     </div>
 
