fix head content

--- a/index.html
+++ b/index.html
@@ -67,18 +67,20 @@
 
     <div class="mdc-top-app-bar--fixed-adjust">
       <div class="head-content article">
-        <h1 class="mdc-typography--headline1">
-          ZERO WASTE<br />
-          Academy
-        </h1>
-        <p class="mdc-typography--subtitle1">
-          вчися онлайн у кращих<br />
-          разом з кращими керувати<br />
-          відходами по-сучасному
-        </p>
-        <a class="mdc-button mdc-button--raised" href="#teaching.html">
-          <span class="mdc-button__label">Почати навчання</span>
-        </a>
+        <div>
+          <h1 class="mdc-typography--headline1">
+            ZERO WASTE<br />
+            Academy
+          </h1>
+          <p class="mdc-typography--subtitle1">
+            вчися онлайн у кращих<br />
+            разом з кращими керувати<br />
+            відходами по-сучасному
+          </p>
+          <a class="mdc-button mdc-button--raised" href="#teaching.html">
+            <span class="mdc-button__label">Почати навчання</span>
+          </a>
+        </div>
       </div>
     </div>
     <div>
