--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#history-and-results.html" class="mdc-list-item" role="option">
           <span class="mdc-list-item__text">Історія та результати</span>
         </a>
-        <a href="#teaching.html" class="mdc-list-item" role="option">
+        <a href="teaching.html" class="mdc-list-item" role="option">
           <span class="mdc-list-item__text">Навчання</span>
         </a>
         <a href="#certificate.html" class="mdc-list-item" role="option">
@@ -55,7 +55,7 @@
           <a class="mdc-list-item" role="option" href="#history-and-results.html">
             <span class="mdc-list-item__text">Історія та результати</span>
           </a>
-          <a class="mdc-list-item" role="option" href="#teaching.html">
+          <a class="mdc-list-item" role="option" href="teaching.html">
             <span class="mdc-list-item__text">Навчання</span>
           </a>
           <a class="mdc-list-item" role="option" href="#certificate.html">
@@ -77,7 +77,7 @@
             разом з кращими керувати<br />
             відходами по-сучасному
           </p>
-          <a class="mdc-button mdc-button--raised" href="#teaching.html">
+          <a class="mdc-button mdc-button--raised" href="teaching.html">
             <span class="mdc-button__label">Почати навчання</span>
           </a>
         </div>
@@ -264,7 +264,7 @@
             </a>
           </li>
           <li>
-            <a class="" href="#teaching.html">
+            <a class="" href="teaching.html">
               <span class="">Навчання</span>
             </a>
           </li>
@@ -326,17 +326,17 @@
           <li class="social">
             <a class="imglink" href="https://www.facebook.com/kharkivzerowaste">
               <svg>
-                <use xlink:href="assets/icons.svg#facebook"></use>
+                <use href="assets/icons.svg#facebook"></use>
               </svg>
             </a>
             <a class="imglink" href="https://www.instagram.com/kharkiv_zero_waste/">
               <svg>
-                <use xlink:href="assets/icons.svg#instagram"></use>
+                <use href="assets/icons.svg#instagram"></use>
               </svg>
             </a>
             <a class="imglink youtube" href="https://www.youtube.com/@zerowastekharkiv7514">
               <svg>
-                <use xlink:href="assets/icons.svg#youtube"></use>
+                <use href="assets/icons.svg#youtube"></use>
               </svg>
             </a>
           </li>
