--- a/team.html
+++ b/team.html
@@ -25,7 +25,7 @@
                 <a href="#history-and-results.html" class="mdc-list-item" role="option">
                     <span class="mdc-list-item__text">Історія та результати</span>
                 </a>
-                <a href="#teaching.html" class="mdc-list-item" role="option">
+                <a href="teaching.html" class="mdc-list-item" role="option">
                     <span class="mdc-list-item__text">Навчання</span>
                 </a>
                 <a href="#certificate.html" class="mdc-list-item" role="option">
@@ -57,7 +57,7 @@
                     <a class="mdc-list-item" role="option" href="#history-and-results.html">
                         <span class="mdc-list-item__text">Історія та результати</span>
                     </a>
-                    <a class="mdc-list-item" role="option" href="#teaching.html">
+                    <a class="mdc-list-item" role="option" href="teaching.html">
                         <span class="mdc-list-item__text">Навчання</span>
                     </a>
                     <a class="mdc-list-item" role="option" href="#certificate.html">
@@ -125,7 +125,7 @@
                         <div>
                             <img src="assets/irina-kazakova.jpg" />
                             <h3>Ірина Казакова</h3>
-                            <a class="mdc-button mdc-button--raised" href="#teaching.html">
+                            <a class="mdc-button mdc-button--raised" href="teaching.html">
                                 <span class="mdc-button__label">Замовити консультацію</span>
                             </a>
                         </div>
@@ -151,7 +151,7 @@
                         <div>
                             <img src="assets/viktor-gudenec.jpg" />
                             <h3>Віктор Гуденець</h3>
-                            <a class="mdc-button mdc-button--raised" href="#teaching.html">
+                            <a class="mdc-button mdc-button--raised" href="teaching.html">
                                 <span class="mdc-button__label">Замовити консультацію</span>
                             </a>
                         </div>
@@ -165,7 +165,7 @@
                         <div>
                             <img src="assets/janina-basista.jpg" />
                             <h3>Янина Басиста</h3>
-                            <a class="mdc-button mdc-button--raised" href="#teaching.html">
+                            <a class="mdc-button mdc-button--raised" href="teaching.html">
                                 <span class="mdc-button__label">Замовити консультацію</span>
                             </a>
                         </div>
@@ -185,7 +185,7 @@
                         <div>
                             <img src="assets/julia-makovecka.jpg" />
                             <h3>Юлія Маковецька</h3>
-                            <a class="mdc-button mdc-button--raised" href="#teaching.html">
+                            <a class="mdc-button mdc-button--raised" href="teaching.html">
                                 <span class="mdc-button__label">Замовити консультацію</span>
                             </a>
                         </div>
@@ -205,7 +205,7 @@
                         <div>
                             <img src="assets/vasa-pupkin.jpg" />
                             <h3>Анастасія Мартиненко</h3>
-                            <a class="mdc-button mdc-button--raised" href="#teaching.html">
+                            <a class="mdc-button mdc-button--raised" href="teaching.html">
                                 <span class="mdc-button__label">Замовити консультацію</span>
                             </a>
                         </div>
@@ -232,7 +232,7 @@
                         <div>
                             <img src="assets/lilianna-semenuta.jpg" />
                             <h3>Ліліана Семенюта</h3>
-                            <a class="mdc-button mdc-button--raised" href="#teaching.html">
+                            <a class="mdc-button mdc-button--raised" href="teaching.html">
                                 <span class="mdc-button__label">Замовити консультацію</span>
                             </a>
                         </div>
@@ -252,7 +252,7 @@
                         <div>
                             <img src="assets/natalia-denisenko.jpg" />
                             <h3>Наталія Денисенко</h3>
-                            <a class="mdc-button mdc-button--raised" href="#teaching.html">
+                            <a class="mdc-button mdc-button--raised" href="teaching.html">
                                 <span class="mdc-button__label">Замовити консультацію</span>
                             </a>
                         </div>
@@ -295,7 +295,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="" href="#teaching.html">
+                        <a class="" href="teaching.html">
                             <span class="">Навчання</span>
                         </a>
                     </li>
@@ -357,17 +357,17 @@
                     <li class="social">
                         <a class="imglink" href="https://www.facebook.com/kharkivzerowaste">
                             <svg>
-                                <use xlink:href="assets/icons.svg#facebook"></use>
+                                <use href="assets/icons.svg#facebook"></use>
                             </svg>
                         </a>
                         <a class="imglink" href="https://www.instagram.com/kharkiv_zero_waste/">
                             <svg>
-                                <use xlink:href="assets/icons.svg#instagram"></use>
+                                <use href="assets/icons.svg#instagram"></use>
                             </svg>
                         </a>
                         <a class="imglink youtube" href="https://www.youtube.com/@zerowastekharkiv7514">
                             <svg>
-                                <use xlink:href="assets/icons.svg#youtube"></use>
+                                <use href="assets/icons.svg#youtube"></use>
                             </svg>
                         </a>
                     </li>
