--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <h4 class="mdc-typography--headline4">Курси</h4>
           </li>
           <li>
-            <a class="" href="#">
+            <a class="" href="teaching.basic.html">
               <span class="">Базовий курс</span>
             </a>
           </li>
