--- a/teaching.html
+++ b/teaching.html
@@ -98,7 +98,7 @@
                             після
                             оплати (лінк)
                         </p>
-                        <a class="mdc-button mdc-button--raised" href="teaching.html">
+                        <a class="mdc-button mdc-button--raised" href="teaching.basic.html">
                             <span class="mdc-button__label">Почати навчання</span>
                         </a>
                     </dd>
@@ -247,7 +247,7 @@
                         <h4 class="mdc-typography--headline4">Курси</h4>
                     </li>
                     <li>
-                        <a class="" href="#">
+                        <a class="" href="teaching.basic.html">
                             <span class="">Базовий курс</span>
                         </a>
                     </li>
